# cordoba

./: .gitignore  .justfile  .projections.json  CMakeLists.txt  CMakePresets.json  README  README.md  conanfile.py  devbox.json
.cspell/: custom-dictionary-workspace.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
cmake/: CordobaConfig.cmake.in  CordobaConfigVersion.cmake.in
dbg/: CMakeLists.txt
dbg/inc/: pathTraverse.h
dbg/src/: dbg.cpp
dbg/test/: testPathTraverser.cpp
examples/: CMakeLists.txt  example.cpp
gd/: CMakeLists.txt
gd/inc/: collector.h  expected.h  fmt.h  guard.h  out.h
gd/src/: guard.cpp  pathTraverse.h
gd/test/: crud.cpp  greens.cpp
gd/test/inc/: generator.h  git.h  wgen.h
main/: CMakeLists.txt
main/gd/: CMakeLists.txt
main/gd/inc/: collector.h  debug.h  err.h  expected.h  guard.h  out.h
main/gd/inc/gd/: gd.h
main/gd/src/: gd.cpp  guard.cpp  pathTraverse.h
main/gd/test/: crud.cpp  greens.cpp  testPathTraverser.cpp  testgd.cpp
main/gd/test/inc/: crudite.h  git.h  wgen.h
main/src/: example.cpp  generator.h  timing.cpp
test_package/: CMakeLists.txt  test_app.cpp
